notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: ewallet
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: ewallet-notification:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 7003
