transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: transaction
    template: 
      metadata:
        labels:
          app: transaction
      spec:
        containers:
         - name: transaction
           image: gbrn7/ewallet-transaction:latest
           ports:
            - containerPort: 7082 #HTTP
