ums-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ums
  namespace: ewallet
  labels:
    app: ums
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ums
  template:
    metadata:
      labels:
        app: ums
    spec:
      containers:
        - name: ums
          image: ewallet-ums:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 7000
