wallet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: wallet
    template: 
      metadata:
        labels:
          app: wallet
      spec:
        containers:
         - name: wallet
           image: gbrn7/ewallet-wallet:latest
           ports:
           -  containerPort: 8001 #HTTP
