notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: ewallet
  labels:
    app: notification
spec:
  type: ClusterIP
  selector:
    app: notification
  ports:
    - protocol: TCP
      name: grpc
      port: 7003
      targetPort: 7003
