transaction-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: transaction
spec:
  selector: 
    matchLabels:
      app: transaction
    type: NodePort 
      ports:
        - protocol: TCP
          name: http
          port: 80
          targetPort: 8082 #HTTP
          NodePort: 30004
