ums-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: ums
spec:
  selector: 
    matchLabels:
      app: ums
    type: NodePort 
      ports:
        - protocol: TCP
          name: http
          port: 80
          targetPort: 8080 #HTTP
          nodePort: 30001
        - protocol: TCP
          name: grpc
          port: 7000
          targetPort: 7000 #gRPC
          nodePort: 30002
