wallet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet
  namespace: ewallet
  labels:
    app: wallet
spec:
  type: ClusterIP
  selector:
    app: wallet
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8081
