ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ewallet-ingress
  namespace: ewallet
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: ums
                port:
                  number: 80
          - path: /wallet
            pathType: Prefix
            backend:
              service:
                name: wallet
                port:
                  number: 80
          - path: /transaction
            pathType: Prefix
            backend:
              service:
                name: transaction
                port:
                  number: 80
